--- a/utils.css
+++ b/utils.css
@@ -24,7 +24,7 @@
 }
 
 .cont{
-     background-color: cyan;
+     background-color: rgb(13, 255, 0);
      width: fit-content;
      margin: auto;
      padding: 2rem;
