--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     }
 .container {
-    background-color: #e5e5fd; 
+    background-color: #d6f9c9; 
     min-height: 100vh;
     border: 10px solid #1d1e4c;
     }
